# skypilot-sidecar

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md  semantic.yml
.github/workflows/: ci.yml  post-main-push.yml  post-release.yml  release-please.yml
docker/: entrypoint.sh
src/: api.py  config.py  main.py  models.py  services.py
tests/data/: vms.csv
tests/integration/: test_integration.py
tests/integration/data/aws/: vms.csv
tests/integration/data/fluidstack/: vms.csv
tests/unit/: test_api.py  test_config.py  test_main.py  test_models.py  test_services.py
