[project]
name = "skypilot-sidecar"
version = "0.1.0"
description = "A minimal REST API that exposes non-GPU instance data from SkyPilot catalog files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = "tests/unit"
python_files = "test_*.py"
